--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 </head>
 
 <body>
-    <a href="https://sivsagar.github.io/robotics-rc-bomb-detection-car/Website_Deployment/index.html">Go To Control
+    <a href="https://whatisaprocoder.github.io/robotics-rc-bomb-detection-car/Website_Deployment/index.html">Go To
+        Control
         Panel</a>
 </body>
 
